fix(LGB): overlap issue (#2619)
* fix(LGB): overlap issue

* fix(LGB): overlap issue

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1997,3 +1997,11 @@ span.token.active-word {
   background: #cccccc;
   border: 1px solid black;
 }
+
+.ant-modal-wrap {
+  z-index: 1003;
+}
+
+.ant-modal-mask {
+  z-index: 1003;
+}
